spacing fix

--- a/src/App.css
+++ b/src/App.css
@@ -95,6 +95,7 @@
 }
 
 #agg-pts {
-  margin-right: 2em;
+  margin-right: 2.6em;
   margin-left: 1.5em;
+  margin-top: 0.2em;
 }
